reset password page

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=6365753543942ceae97e709de8134bc1
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://127.0.0.1:465
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
