--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+composer.lock
+composer.json
+symfony.lock
+config/bundles.php
