--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "symfony/yaml": "5.1.*",
         "symfonycasts/reset-password-bundle": "^1.2",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/string-extra": "^3.2",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
