--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,4 +36,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/Admin, roles: ROLE_ADMIN }
-        # - { path: ^/compte, roles: ROLE_USER }
+        - { path: ^/compte, roles: ROLE_USER }
+        - { path: ^/voirpanier, roles: ROLE_USER }
